testsuite/escript/classes/duplicate-defined-class.err
duplicate-defined-class.src:7:1: error: Class 'Animal' defined more than once.