testsuite/escript/classes/duplicate-defined-class.src
class Animal()
  function Animal( this, name )
    this.name := name;
  endfunction
endclass

class Animal() endclass
